<resources>
    <string name="app_name">Project Assistant</string>

    <string name="title_activity_tasker">Project Assistant</string>
    <string name="title_project">Projects</string>
    <string name="title_about">About Us</string>
    <string name="title_contact">Contact Us</string>
    <string name="title_archive">Archive</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_project_state">You don\'t have any projects yet!</string>
    <string name="btn_save_text">Save</string>
    <string name="project_name">Project Name</string>
    <string name="save_project_title">Create new project</string>
    <string name="project_detail_done_text">Done tasks :</string>
    <string name="project_detail_total_text">Total tasks :</string>
    <string name="tab_todo">TO-DO</string>
    <string name="tab_doing">DOING</string>
    <string name="tab_done">DONE</string>
    <string name="tab_canceled">CANCELED</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="edit_project">Edit Project</string>
    <string name="add_task">Add Task</string>
    <string name="save_task_title">Create new task</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="task_name">Task name</string>
    <string name="task_value">Task value</string>
    <string name="delete_project">Delete project</string>
    <string name="archive_it">Archive it?</string>
    <string name="empty_task_state">You don\'t have any tasks yet!</string>
    <string name="update_state">Update</string>
    <string name="delete">Delete</string>
    <string name="version">Version 1</string>
    <string name="programmer"><![CDATA[Designed & developed by : Mehrdad Garebaghi]]></string>
    <string name="site">Our Site : http://technopedia.ir</string>
    <string name="licenses">Open Source Licences</string>

    <string-array name="task_states">
        <item>TO-DO</item>
        <item>DOING</item>
        <item>DONE</item>
        <item>CANCELED</item>
    </string-array>
</resources>
